sw online first

--- a/public/clients.html
+++ b/public/clients.html
@@ -118,7 +118,7 @@
                   </ul>
                   <div class="line"></div><a class="btn text-uppercase" href="slider1"><span>view profile</span></a>
                 </div>
-                <figure><img src="./img/slider-1.jpg" title="derek&lt;br/&gt;anderson" alt="british comedian"/>
+                <figure><img src="https://cdn.pixabay.com/photo/2015/01/08/18/29/entrepreneur-593358_960_720.jpg" title="derek&lt;br/&gt;anderson" alt="british comedian"/>
                   <figcaption>
                     <h2>derek<br/>anderson</h2>
                     <p>british comedian</p>
@@ -137,7 +137,7 @@
                   </ul>
                   <div class="line"></div><a class="btn text-uppercase" href="slider2"><span>view profile</span></a>
                 </div>
-                <figure><img src="./img/slider-2.jpg" title="ahmed&lt;br/&gt;samir" alt="british comedian"/>
+                <figure><img src="https://cdn.pixabay.com/photo/2015/06/19/09/39/lonely-814631__340.jpg" title="ahmed&lt;br/&gt;samir" alt="british comedian"/>
                   <figcaption>
                     <h2>ahmed<br/>samir</h2>
                     <p>british comedian</p>
@@ -156,7 +156,7 @@
                   </ul>
                   <div class="line"></div><a class="btn text-uppercase" href="slider3"><span>view profile</span></a>
                 </div>
-                <figure><img src="./img/slider-3.jpg" title="super&lt;br/&gt;anderson" alt="british hero"/>
+                <figure><img src="https://cdn.pixabay.com/photo/2014/07/31/23/49/guitarist-407212__340.jpg" title="super&lt;br/&gt;anderson" alt="british hero"/>
                   <figcaption>
                     <h2>super<br/>anderson</h2>
                     <p>british hero</p>
@@ -175,7 +175,7 @@
                   </ul>
                   <div class="line"></div><a class="btn text-uppercase" href="slider4"><span>view profile</span></a>
                 </div>
-                <figure><img src="./img/slider-4.jpg" title="derek&lt;br/&gt;anderson" alt="british comedian"/>
+                <figure><img src="https://cdn.pixabay.com/photo/2016/11/29/08/51/city-1868530__340.jpg" title="derek&lt;br/&gt;anderson" alt="british comedian"/>
                   <figcaption>
                     <h2>derek<br/>anderson</h2>
                     <p>british comedian</p>
@@ -246,7 +246,7 @@
                 <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
                   <!-- start client-->
                   <div class="client" data-filter="comdian">
-                    <figure><img src="./img/slider-1.jpg" alt="keith ruiz" title="comdian"/>
+                    <figure><img src="https://cdn.pixabay.com/photo/2017/06/26/02/47/people-2442565__340.jpg" alt="keith ruiz" title="comdian"/>
                       <figcaption><a class="client-link" href="#!" aria-label="client-profile">
                           <div class="client-arrow"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
                           <div class="client-title">
@@ -259,7 +259,7 @@
                 <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
                   <!-- start client-->
                   <div class="client" data-filter="actor">
-                    <figure><img src="./img/slider-2.jpg" alt="ahmed ruiz" title="actor"/>
+                    <figure><img src="https://cdn.pixabay.com/photo/2015/07/20/12/57/man-852766__340.jpg" alt="ahmed ruiz" title="actor"/>
                       <figcaption><a class="client-link" href="#!" aria-label="client-profile">
                           <div class="client-arrow"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
                           <div class="client-title">
@@ -272,7 +272,7 @@
                 <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
                   <!-- start client-->
                   <div class="client" data-filter="musician">
-                    <figure><img src="./img/slider-3.jpg" alt="super ahmed" title="musician"/>
+                    <figure><img src="https://cdn.pixabay.com/photo/2015/03/14/19/45/suit-673697__340.jpg" alt="super ahmed" title="musician"/>
                       <figcaption><a class="client-link" href="#!" aria-label="client-profile">
                           <div class="client-arrow"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
                           <div class="client-title">
@@ -285,7 +285,7 @@
                 <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
                   <!-- start client-->
                   <div class="client" data-filter="model">
-                    <figure><img src="./img/slider-4.jpg" alt="super hero" title="model"/>
+                    <figure><img src="https://cdn.pixabay.com/photo/2015/07/20/12/53/man-852762__340.jpg" alt="super hero" title="model"/>
                       <figcaption><a class="client-link" href="#!" aria-label="client-profile">
                           <div class="client-arrow"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
                           <div class="client-title">
@@ -298,7 +298,7 @@
                 <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
                   <!-- start client-->
                   <div class="client" data-filter="comdian">
-                    <figure><img src="./img/slider-1.jpg" alt="keith ruiz" title="comdian"/>
+                    <figure><img src="https://cdn.pixabay.com/photo/2014/08/08/20/51/hunger-413685__340.jpg" alt="keith ruiz" title="comdian"/>
                       <figcaption><a class="client-link" href="#!" aria-label="client-profile">
                           <div class="client-arrow"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
                           <div class="client-title">
@@ -311,7 +311,7 @@
                 <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
                   <!-- start client-->
                   <div class="client" data-filter="actor">
-                    <figure><img src="./img/slider-2.jpg" alt="ahmed ruiz" title="actor"/>
+                    <figure><img src="https://cdn.pixabay.com/photo/2015/04/27/22/53/man-742766__340.jpg" alt="ahmed ruiz" title="actor"/>
                       <figcaption><a class="client-link" href="#!" aria-label="client-profile">
                           <div class="client-arrow"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
                           <div class="client-title">
@@ -324,7 +324,7 @@
                 <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
                   <!-- start client-->
                   <div class="client" data-filter="musician">
-                    <figure><img src="./img/slider-3.jpg" alt="super ahmed" title="musician"/>
+                    <figure><img src="https://cdn.pixabay.com/photo/2017/08/01/01/33/beanie-2562646__340.jpg" alt="super ahmed" title="musician"/>
                       <figcaption><a class="client-link" href="#!" aria-label="client-profile">
                           <div class="client-arrow"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
                           <div class="client-title">
@@ -337,7 +337,7 @@
                 <div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
                   <!-- start client-->
                   <div class="client" data-filter="model">
-                    <figure><img src="./img/slider-4.jpg" alt="super hero" title="model"/>
+                    <figure><img src="https://cdn.pixabay.com/photo/2014/06/04/16/58/cigar-362183__340.jpg" alt="super hero" title="model"/>
                       <figcaption><a class="client-link" href="#!" aria-label="client-profile">
                           <div class="client-arrow"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
                           <div class="client-title">
@@ -363,7 +363,7 @@
                 <div class="carousel slide" id="post-slider" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <figure><img src="./img/slider-1.jpg" alt="5 reasons to keep your beauty salon reservation" title="5 reasons to keep your beauty salon reservation"/>
+                      <figure><img src="https://cdn.pixabay.com/photo/2018/06/12/21/26/person-3471540__340.jpg" alt="5 reasons to keep your beauty salon reservation" title="5 reasons to keep your beauty salon reservation"/>
                         <figcaption>
                           <h3>5 reasons to keep your beauty salon reservation</h3>
                         </figcaption>
@@ -372,7 +372,7 @@
                         read more<i class="fa fa-arrow-right ml-3" aria-hidden="true"></i></button>
                     </div>
                     <div class="carousel-item">
-                      <figure><img src="./img/slider-2.jpg" alt="benjamin franklin method of habit formation" title="benjamin franklin method of habit formation"/>
+                      <figure><img src="https://cdn.pixabay.com/photo/2015/11/07/11/57/holding-hands-1031665__340.jpg" alt="benjamin franklin method of habit formation" title="benjamin franklin method of habit formation"/>
                         <figcaption>
                           <h3>benjamin franklin method of habit formation</h3>
                         </figcaption>
@@ -381,7 +381,7 @@
                         read more<i class="fa fa-arrow-right ml-3" aria-hidden="true"></i></button>
                     </div>
                     <div class="carousel-item">
-                      <figure><img src="./img/slider-4.jpg" alt="29 mativational quotes for business" title="29 mativational quotes for business"/>
+                      <figure><img src="https://cdn.pixabay.com/photo/2016/11/21/14/30/black-people-1845715__340.jpg" alt="29 mativational quotes for business" title="29 mativational quotes for business"/>
                         <figcaption>
                           <h3>29 mativational quotes for business</h3>
                         </figcaption>
@@ -406,7 +406,7 @@
             <div class="row">
               <div class="col-12 col-md-6 col-lg-4">
                 <!-- start stories item--><a class="media" href="#!">
-                  <figure class="mr-3"><img src="./img/slider-1.jpg" alt="5 reasons to keep your beauty salon reservation" title="5 reasons to keep your beauty salon reservation">
+                  <figure class="mr-3"><img src="https://cdn.pixabay.com/photo/2013/04/12/17/50/man-103041__340.jpg" alt="5 reasons to keep your beauty salon reservation" title="5 reasons to keep your beauty salon reservation">
                     <figcaption class="d-flex align-items-center justify-content-center"><i class="fa fa-play" aria-hidden="true"></i></figcaption>
                   </figure>
                   <div class="media-body text-left">
@@ -417,7 +417,7 @@
               </div>
               <div class="col-12 col-md-6 col-lg-4">
                 <!-- start stories item--><a class="media" href="#!">
-                  <figure class="mr-3"><img src="./img/slider-2.jpg" alt="benjamin franklin method of habit formation" title="benjamin franklin method of habit formation">
+                  <figure class="mr-3"><img src="https://cdn.pixabay.com/photo/2016/01/18/20/09/old-age-1147283__340.jpg" alt="benjamin franklin method of habit formation" title="benjamin franklin method of habit formation">
                     <figcaption class="d-flex align-items-center justify-content-center"><i class="fa fa-play" aria-hidden="true"></i></figcaption>
                   </figure>
                   <div class="media-body text-left">
@@ -428,7 +428,7 @@
               </div>
               <div class="col-12 col-md-6 col-lg-4">
                 <!-- start stories item--><a class="media" href="#!">
-                  <figure class="mr-3"><img src="./img/slider-3.jpg" alt="29 mativational quotes for business" title="29 mativational quotes for business">
+                  <figure class="mr-3"><img src="https://cdn.pixabay.com/photo/2015/01/31/18/17/arabs-618749__340.jpg" alt="29 mativational quotes for business" title="29 mativational quotes for business">
                     <figcaption class="d-flex align-items-center justify-content-center"><i class="fa fa-play" aria-hidden="true"></i></figcaption>
                   </figure>
                   <div class="media-body text-left">
@@ -439,7 +439,7 @@
               </div>
               <div class="col-12 col-md-6 col-lg-4">
                 <!-- start stories item--><a class="media" href="#!">
-                  <figure class="mr-3"><img src="./img/slider-4.jpg" alt="29 mativational quotes for business" title="29 mativational quotes for business">
+                  <figure class="mr-3"><img src="https://cdn.pixabay.com/photo/2016/02/19/11/52/couple-1210023__340.jpg" alt="29 mativational quotes for business" title="29 mativational quotes for business">
                     <figcaption class="d-flex align-items-center justify-content-center"><i class="fa fa-play" aria-hidden="true"></i></figcaption>
                   </figure>
                   <div class="media-body text-left">
@@ -450,7 +450,7 @@
               </div>
               <div class="col-12 col-md-6 col-lg-4">
                 <!-- start stories item--><a class="media" href="#!">
-                  <figure class="mr-3"><img src="./img/slider-1.jpg" alt="5 reasons to keep your beauty salon reservation" title="5 reasons to keep your beauty salon reservation">
+                  <figure class="mr-3"><img src="https://cdn.pixabay.com/photo/2016/11/29/02/16/adult-1866798__340.jpg" alt="5 reasons to keep your beauty salon reservation" title="5 reasons to keep your beauty salon reservation">
                     <figcaption class="d-flex align-items-center justify-content-center"><i class="fa fa-play" aria-hidden="true"></i></figcaption>
                   </figure>
                   <div class="media-body text-left">
@@ -461,7 +461,7 @@
               </div>
               <div class="col-12 col-md-6 col-lg-4">
                 <!-- start stories item--><a class="media" href="#!">
-                  <figure class="mr-3"><img src="./img/slider-2.jpg" alt="benjamin franklin method of habit formation" title="benjamin franklin method of habit formation">
+                  <figure class="mr-3"><img src="https://cdn.pixabay.com/photo/2016/02/18/22/17/old-man-1208210__340.jpg" alt="benjamin franklin method of habit formation" title="benjamin franklin method of habit formation">
                     <figcaption class="d-flex align-items-center justify-content-center"><i class="fa fa-play" aria-hidden="true"></i></figcaption>
                   </figure>
                   <div class="media-body text-left">
